--- a/Ex1/index.html
+++ b/Ex1/index.html
@@ -12,7 +12,7 @@
     Hi World!
     <script>writeName();</script>
     <p>hi there</p>
-    <img src="zoomout.png" id="frccMap" />
+    <img src="zoomout.png" id="frccMap" /><br>
     <a href="javascript:zoomin();">zoomin</a>
     <a href="javascript:zoomout();">zoomout</a>
   </body>
