--- a/Ex6/Ex6.html
+++ b/Ex6/Ex6.html
@@ -9,7 +9,7 @@
     
 </head>
   <body>
-    <a href="Ex6.html">Go to WP!</a>
+    <a href="Ex6.html?source=winterpark">Go to WP!</a>
     <p>
       
     <div id="skiText">Ski Area: </div>
