Update Mapbox GL JS version in index.html

--- a/Ex10b/index.html
+++ b/Ex10b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>AGOL Feature Service</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <script src='https://api.mapbox.com/mapbox-gl-js/vç/mapbox-gl.js'>
+    <script src='https://api.mapbox.com/mapbox-gl-js/v3.15.0/mapbox-gl.js'>
     </script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v3.15.0/mapbox-gl.css' rel='stylesheet' />
   </head>
